[project]
name = "gdelt-stars"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "gdelt>=0.1.14",
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=3.4.1",
]
